<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:ignore="UnusedAttribute,RtlSymmetry,ContentDescription">



    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_56"
                android:paddingStart="@dimen/txt_size_32"
                android:paddingEnd="@dimen/txt_size_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/updateProfileFragmentImgNewClient"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_96"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/new_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateProfileFragmentEditNameClient"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/icon_user"
                    android:drawablePadding="@dimen/dim_4"
                    android:drawableTint="@color/dark"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentImgNewClient" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateProfileFragmentEditEmailClient"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:drawableStart="@drawable/icon_email"
                    android:drawablePadding="@dimen/dim_4"
                    android:drawableTint="@color/dark"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentEditNameClient" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateProfileFragmentEditPhoneClient"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:drawableStart="@drawable/icon_phone"
                    android:drawablePadding="@dimen/dim_4"
                    android:drawableTint="@color/dark"
                    android:hint="@string/phone"
                    android:inputType="date"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentEditEmailClient"
                    tools:layout_editor_absoluteY="212dp" />


                <Spinner
                    android:id="@+id/updateProfileFragmentCiteSpinnerClient"

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_spinner_dark"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentEditPhoneClient" />

                <Spinner
                    android:id="@+id/updateProfileFragmentRegionsSpinnerClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_spinner_dark"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentCiteSpinnerClient" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateProfileFragmentEditPasswordClient"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="@dimen/dim_4"
                    android:drawableTint="@color/dark"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentRegionsSpinnerClient" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateProfileFragmentEmphasisEditPasswordClient"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="@dimen/dim_4"
                    android:drawableTint="@color/dark"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentEditPasswordClient" />

                <Button
                    android:id="@+id/updateProfileFragmentSaveBtnClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_btn"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updateProfileFragmentEmphasisEditPasswordClient" />

                <ProgressBar
                    android:id="@+id/progressBarClient"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/updateProfileFragmentSaveBtnClient"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/updateProfileFragmentEditNameClient"
                    tools:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8"
                    android:src="@drawable/ic_home_black_24dp"
                    android:tint="@color/dark"
                    app:layout_constraintBottom_toBottomOf="@+id/updateProfileFragmentRegionsSpinnerClient"
                    app:layout_constraintStart_toStartOf="@+id/updateProfileFragmentRegionsSpinnerClient"
                    app:layout_constraintTop_toTopOf="@+id/updateProfileFragmentRegionsSpinnerClient" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8"
                    android:src="@drawable/ic_home_black_24dp"
                    android:tint="@color/dark"
                    app:layout_constraintBottom_toBottomOf="@+id/updateProfileFragmentCiteSpinnerClient"
                    app:layout_constraintStart_toStartOf="@+id/updateProfileFragmentCiteSpinnerClient"
                    app:layout_constraintTop_toTopOf="@+id/updateProfileFragmentCiteSpinnerClient" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>